web_static/styles/6-filters.css
.filters{
    width: 100%;
    height: 70px;
    background: #FFFFFF;
    border: solid 1px #DDDDDD;
    border-radius: 4px;
}
.locations, .amenities{
    display: inline-grid;
    width: 25%;
    height: 100%;
    border-right: solid 1px #DDDDDD;
    float: left;
}
.filters .amenities{
    border-right: none;
}
.filters div h3{
    font-weight: 600;
    margin-bottom: 0;
    margin-left: 15%;
}
.filters div h4{
    font-weight: 400;
    font-size: 14px;
    margin-top: 1px;
    margin-left: 15%;
}
ul, ol{
    list-style: none;
    margin: 0;
    padding: 0;
}
.popover{
    display: none;
    background: #FAFAFA;
    width: 250px;
    border: solid 1px #DDDDDD;
    border-radius: 4px;
    margin: -1px 0 0 -1px;
    padding-bottom: 60px;
}
.popover h2{
    font-size: 16px;
    margin: 10% 0 2% 10%;
}
.popover h4{
    margin-bottom: 5px;
}
.amenities .popover{
    padding-top: 10% ;
    padding-bottom: 10%;
}
.locations:hover > .popover{
    display: block;
}
.amenities:hover > .popover{
    display: block;
}
.filters button{
    width: 20%;
    height: 48px;
    background: #FF5A5F;
    color: #FFFFFF;
    font-size: 18px;
    border: none;
    border-radius: 4px;
    float: right;
    margin: 11px 30px 11px 0;
    opacity: 1;
}
.filters button:hover{
    opacity: 0.9;
}

